<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">电测管家</string>
    <string name="lianjielanya" translatable="false">连接蓝牙</string>
    <string name="zhongying" translatable="false">中/英</string>
    <string name="dakailanya" translatable="false">打开蓝牙</string>
    <string name="guanbilanya" translatable="false">关闭蓝牙</string>
    <string name="sousuolanya" translatable="false">搜索蓝牙</string>
    <string name="tingzhisousuo" translatable="false">停止搜索</string>
    <string name="qingkaiqilanya" translatable="false">请开启蓝牙</string>
    <string name="weilianjie" translatable="false">未连接</string>
    <string name="yilianjie" translatable="false">已连接</string>
    <string name="lianjiezhong" translatable="false">连接中...</string>
    <string name="ceshifangfa">测试方法</string>
    <string name="std_app_title" translatable="false">变压器直流电阻测试仪</string>
    <string name="app_zhizuceshi" translatable="false">直阻测试</string>
    <string name="app_xiaocigongneng" translatable="false">消磁功能</string>
    <string name="app_diaoyuejilu" translatable="false">调阅记录</string>
    <string name="app_shijianshezhi" translatable="false">时间设置</string>
    <string name="app_xitongshezhi" translatable="false">系统设置</string>
    <string name="zzcs_santongdao_ceshi" translatable="false">三通道测试</string>
    <string name="zzcs_yn_ceshi" translatable="false">YN测试</string>
    <string name="zzcs_dy_ceshi" translatable="false">D(Y)测试</string>
    <string name="ceshidianliu" translatable="false">测试电流</string>
    <string name="ceshixiangbie" translatable="false">测试相别</string>
    <string name="lingxiandianzu" translatable="false">零线电阻</string>
    <string name="dianliu" translatable="false">电流</string>
    <string name="dianliu2" translatable="false">电流:</string>
    <string name="xiangbie" translatable="false">相别</string>
    <string name="xiangbie2" translatable="false">相别:</string>
    <string name="zhuci" translatable="false">助磁</string>
    <string name="kaishiceshi" translatable="false">开始测试</string>
    <string name="jishi" translatable="false">计时:</string>
    <string name="tingzhi" translatable="false">停止</string>
    <string name="ceshidianzu" translatable="false">测试电阻</string>
    <string name="zhesuandianzu" translatable="false">折算电阻</string>
    <string name="zhesuandianzu2" translatable="false">折算电阻：</string>
    <string name="zuidabupinghenglv" translatable="false">最大不平衡率：</string>
    <string name="fenjieweizhi" translatable="false">分接位置</string>
    <string name="fenjieweizhi2" translatable="false">分接位置:</string>
    <string name="shipinwendu" translatable="false">试品温度</string>
    <string name="baocun" translatable="false">保存</string>
    <string name="dayin" translatable="false">打印</string>
    <string name="huanxiang" translatable="false">换相</string>
    <string name="xiaocixiangbie" translatable="false">消磁相别</string>
    <string name="kaishixiaoci" translatable="false">开始消磁</string>
    <string name="tingzhixiaoci" translatable="false">停止消磁</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tishi" translatable="false">提示</string>
    <string name="fangdiantanchuang" translatable="false">正在放电，请勿拆线！</string>
    <string name="baocuntanchuang" translatable="false">正在保存，请稍后...</string>
    <string name="dayintanchuang" translatable="false">正在打印，请稍后...</string>
    <string name="app_title">变压器短路阻抗测试仪</string>
    <string name="sanxiangduanluzukang">三相短路阻抗</string>
    <string name="danxiangduanluzukang">单相短路阻抗</string>
    <string name="lingxuzukang">零序阻抗</string>
    <string name="shujuchuli">数据处理</string>
    <string name="xitongshezhi">系统设置</string>
    <string name="canshushezhi">参数设置</string>
    <string name="ceshi">测试</string>
    <string name="fanhui">返回</string>
    <string name="edingrongliang">额定容量</string>
    <string name="xuanzedianyuan">选择电源</string>
    <string name="fenjiedianya">分接电压</string>
    <string name="suopingdianliu">锁屏电流</string>
    <string name="mingpaizukang">铭牌阻抗</string>
    <string name="celiangwendu">测量温度</string>
    <string name="jiaozhengwendu">校正温度</string>
    <string name="celiangweizhi">测量位置</string>
    <string name="celiangmoshi">测量模式</string>
    <string name="shipinbianhao">试品编号</string>
    <string name="ceshirenyuan">测试人员</string>
    <string name="celiangjiexian">测量接线</string>
    <string name="bianyaqileixing">变压器类型</string>
    <string name="celiangxiangbie">测量相别</string>
    <string name="ceshibianhao">测试编号</string>
    <string name="celiangpinlv">测量频率</string>
    <string name="duanludianzu">短路电阻</string>
    <string name="gonglvyinshu">功率因数</string>
    <string name="lingxugankang">零序感抗</string>
    <string name="lingxudianzu">零序电阻</string>
    <string name="lingxudiangan">零序电感</string>
    <string name="gaodi">高-低</string>
    <string name="gaozhong">高-中</string>
    <string name="zhongdi">中-低</string>
    <string name="neibu">内部</string>
    <string name="waibu">外部</string>
    <string name="zidong">自动</string>
    <string name="shoudong">手动</string>
    <string name="yylianjie">Y/Y联结</string>
    <string name="ydlianjie">Y/△联结</string>
    <string name="dylianjieaz">△/Y联结(AZ-BX-CY)</string>
    <string name="dylianjieay">△/Y联结(AY-BZ-CX)</string>
    <string name="danxiang">单相</string>
    <string name="sanxiang">三相(Yn/Y、Yn/△)</string>
    <string name="suoping">锁屏</string>
    <string name="chongce">重测</string>
    <string name="sanxiangzukangceshi">三相阻抗测试</string>
    <string name="jiayaraozu">加压绕组</string>
    <string name="shijiadianya">施加电压</string>
    <string name="shijiadianliu">施加电流</string>
    <string name="celiangxiangjiao">测量相角</string>
    <string name="yougonggonglv">有功功率</string>
    <string name="duanluzukang">短路阻抗</string>
    <string name="duanlugankang">短路感抗</string>
    <string name="raozudiangan">绕组电感</string>
    <string name="zukangdianya">阻抗电压</string>
    <string name="abxiang">AB相</string>
    <string name="bcxiang">BC相</string>
    <string name="caxiang">CA相</string>
    <string name="a0xiang">A0相</string>
    <string name="b0xiang">B0相</string>
    <string name="c0xiang">C0相</string>
    <string name="zukangdianyazkbaifenhao">阻抗电压Zk%</string>
    <string name="zukangwuchadzkbaifenhao">阻抗误差△Zk%</string>
    <string name="celiangzukang">测量阻抗</string>
    <string name="celiangdiankang">测量电抗</string>
    <string name="loudiangan">漏电感</string>
    <string name="hengxiangpiancha">横向偏差</string>
    <string name="danxiangzukangceshi">单相阻抗测试</string>
    <string name="ceshicanshu">测试参数</string>
    <string name="shijianshezhi">时间设置</string>
    <string name="tongxuncanshu">通讯参数</string>
    <string name="tiaoshishezhi">调试设置</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="riqi" translatable="false">日期</string>
    <string name="jishuzhibiao" translatable="false">技术指标</string>
    <string name="xingnengtedian" translatable="false">性能特点</string>
    <string name="xingnengtedian1" translatable="false">1.功能强大，可实现过渡波形、过渡时间、过渡电阻、三相同期性等参数的测量、计算；</string>
    <string name="xingnengtedian2" translatable="false">2.采用高亮7.0寸液晶显示器和触摸屏，全中文菜单，操作简单、便捷；</string>
    <string name="xingnengtedian3" translatable="false">3.智能型测试和结果分析，具有放大或缩小波形，自动转换分接档位号的功能；</string>
    <string name="xingnengtedian4" translatable="false">4.三路独立的恒流源</string>
    <string name="xingnengtedian5" translatable="false">5.六路独立信号处理，高速A/D转换，20kHz高速采样，真实反映参数的变化；</string>
    <string name="xingnengtedian6" translatable="false">6.仪器内设大容量FLASH存储器能够存储1000组数据，可随时存档、调阅、分析；</string>
    <string name="xingnengtedian7" translatable="false">7.测试YN、Y、△型变压器，阻值不用换算直接显示；</string>
    <string name="xingnengtedian8" translatable="false">8.仪器带标准U盘接口，可将数据传入U盘，方便于计算机管理数据；</string>
    <string name="xingnengtedian9" translatable="false">9.支持RS232、蓝牙两种通讯方式；</string>
    <string name="xingnengtedian10" translatable="false">10.仪器自带高速热敏打印机，可打印波形、过渡时间、过渡电阻、三相同期性时间等测试结果；</string>
    <string name="xingnengtedian11" translatable="false">11.仪器设有自动放电回路和过压保护电路。</string>
    <string name="jiexiantu" translatable="false">接线图</string>
    <string name="jiexiantusanjiao" translatable="false">1.有载调压绕组（△型）：</string>
    <string name="jiexiantusanjiao1" translatable="false">图一：测ab和bc时接线图</string>
    <string name="jiexiantusanjiao2" translatable="false">测AB和BC：黄色线接A，红色线接C，黑色线接B，绿色线与黑色线短接。</string>
    <string name="jiexiantusanjiao3" translatable="false">测BC和CA：绿色线接B，黄色线接A，黑色线接C，红色线与黑色线短接。</string>
    <string name="jiexiantusanjiao4" translatable="false">测CA和AB：红色线接C，绿色线接B，黑色线接A，黄色线与黑色线短接。</string>
    <string name="hl_cpsc_jszb1" translatable="false">输出电流：50A、100A;</string>
    <string name="hl_cpsc_jszb2" translatable="false">量程：50A:0~60mΩ;100A:0~30mΩ</string>
    <string name="hl_cpsc_jszb3" translatable="false">分辨率：最小0.1μΩ;</string>
    <string name="hl_cpsc_jszb4" translatable="false">精确度：±(0.5%+2个字);</string>
    <string name="hl_cpsc_jszb5" translatable="false">输出功率：500W;</string>
    <string name="hl_cpsc_jszb6" translatable="false">工作方式：1S、3S、10S、60S;</string>
    <string name="hl_cpsc_jszb7" translatable="false">工作电源：AC220V±10%  50HZ;</string>
    <string name="hl_cpsc_jszb8" translatable="false">使用温度：-10~40℃;</string>
    <string name="hl_cpsc_jszb9" translatable="false">外形尺寸：323*275*135mm;</string>
    <string name="hl_cpsc_jszb10" translatable="false">仪器重量：4.9kg;</string>
    <string name="hl_cpsc_xntd1" translatable="false">*多档电流可选(测试电流最大100A)，测试量程范围宽;</string>
    <string name="hl_cpsc_xntd2" translatable="false">*测试电流来自高精度的大电流恒流电源，测试迅速准确;</string>
    <string name="hl_cpsc_xntd3" translatable="false">*采用四端子接线法，排除测试线电阻对测试结果的影响;</string>
    <string name="hl_cpsc_xntd4" translatable="false">*仪器最快1秒显示测试数据，也可连续60秒测试满足应用场合;</string>
    <string name="hl_cpsc_xntd5" translatable="false">*仪器设有输入误接AC380V电源保护和过热保护等功能;</string>
    <string name="hl_cpsc_xntd6" translatable="false">*液晶采用5寸工业级彩色触摸屏，强阳光下清晰可见;</string>
    <string name="hl_cpsc_xntd7" translatable="false">*仪器测试数据可实现打印，实时保存，导出到U盘，本机可存储1000条测试数据;</string>
    <string name="hl_cpsc_xntd8" translatable="false">*仪器具有RS232接口，可以将测试数据传输到后台;</string>
    <string name="hl_cpsc_jszb1_200" translatable="false">输出电流：</string>
    <string name="hl_cpsc_jszb2_200" translatable="false">50A:0~100mΩ;</string>
    <string name="hl_cpsc_jszb3_200" translatable="false">100A:0~50mΩ;</string>
    <string name="hl_cpsc_jszb4_200" translatable="false">150A:0~40mΩ;</string>
    <string name="hl_cpsc_jszb5_200" translatable="false">200A:0~25mΩ;</string>
    <string name="hl_cpsc_jszb6_200" translatable="false">分辨率：最小0.1μΩ;</string>
    <string name="hl_cpsc_jszb7_200" translatable="false">精确度：±(0.5%+2个字);</string>
    <string name="hl_cpsc_jszb8_200" translatable="false">输出功率：2000W</string>
    <string name="hl_cpsc_jszb9_200" translatable="false">工作方式：1S/3S/10S/60S/连续;</string>
    <string name="hl_cpsc_jszb10_200" translatable="false">工作电源：AC220V±10% 50Hz±1Hz;</string>
    <string name="hl_cpsc_jszb11_200" translatable="false">使用温度：-10~40℃;</string>
    <string name="hl_cpsc_xntd1_200" translatable="false">*多档电流可选(测试电流最大200A)，测试量程范围宽;</string>
    <string name="hl_cpsc_xntd2_200" translatable="false">*测试电流来自高精度的大电流恒流电源，测试迅速准确;</string>
    <string name="hl_cpsc_xntd3_200" translatable="false">*采用四端子接线法，排除测试线电阻对测试结果的影响;</string>
    <string name="hl_cpsc_xntd4_200" translatable="false">*仪器最快1秒显示测试数据，也可连续60秒测试满足应用场合；</string>
    <string name="hl_cpsc_xntd5_200" translatable="false">*仪器设有输入误接AC380V电源保护和过热保护等功能;</string>
    <string name="hl_cpsc_xntd6_200" translatable="false">*液晶采用7寸工业级彩色触摸屏，强阳光下清晰可见;</string>
    <string name="hl_cpsc_xntd7_200" translatable="false">*仪器测试数据可实现打印，实时保存，导出到U盘，本机可存储1000条测试数据;</string>
    <string name="hl_cpsc_xntd8_200" translatable="false">*仪器具有RS232接口，可以将测试数据传输到后台;</string>
    <string name="queding" translatable="false">确定</string>
    <string name="quxiao" translatable="false">取消</string>
    <string name="qingshurubaogaomingcheng" translatable="false">请输入报告名称</string>
</resources>