<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llHlCpscJszb100"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:theme="@style/textSize_22_b"
        android:text="@string/jishuzhibiao"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb7"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb8"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb9"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_jszb10"/>
    </LinearLayout>

</LinearLayout>