<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llHlCpscXntd200"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:theme="@style/textSize_22_b"
        android:text="@string/xingnengtedian"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd1_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd2_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd3_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd4_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd5_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd6_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd7_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_16_b"
            android:text="@string/hl_cpsc_xntd8_200"/>
    </LinearLayout>

</LinearLayout>