<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".activity.BlueToothActivity">
    <ListView
        android:id="@+id/lv2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOpen2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dakailanya"/>
        <Button
            android:id="@+id/btnClose2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_height="match_parent"
            android:text="@string/guanbilanya"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnScan2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sousuolanya"/>
        <!--        <Button-->
        <!--            android:id="@+id/btnDisconnect"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_weight="1"-->
        <!--            android:layout_marginLeft="50dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:text="@string/disconnect"/>-->
        <Button
            android:id="@+id/btnZhongYing"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_height="match_parent"
            android:text="@string/zhongying"/>
    </LinearLayout>
</LinearLayout>