<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="5dp"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:hint="@string/qingshurubaogaomingcheng"
            android:background="@drawable/edit_background"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#CCCCCC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvQx"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/quxiao"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#CCCCCC"/>
            <TextView
                android:id="@+id/tvQd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/queding"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>